--- a/grammar/templates/template_more5.html
+++ b/grammar/templates/template_more5.html
@@ -11,5 +11,15 @@
 <form action="{% url 'add' 40 5 %}" method="get">
     <button type="submit">跳转</button>
 </form>
+<br/>
+<br/>
+<br/>
+<br/>
+<br/>
+<form action="{% url 'intro' %}" method="get">
+    name: <input type="text" name="name" value="python"><br>
+    day: <input type="text" name="day" value="10"><br>
+    <button type="submit">提交</button>
+</form>
 </body>
 </html>
